# durbo

./: .editorconfig  .flake8  .gitignore  Dockerfile  README.md  config.template.toml  docker-compose.yml  docker-entrypoint.sh  logging.toml  pyproject.toml
data/: logging.toml
durbo/: __main__.py  fbsyncer.py  syncer.py  tgsyncer.py  utils.py
durbo/config/: logging.py
durbo/data/: base.py  models.py
hata_tessync/: __main__.py  fbsyncer.py  syncer.py  tgsyncer.py  utils.py
hata_tessync/config/: logging.py
tests/: test_durbo.py  test_hata_tessync.py
