[tool.poetry]
name = "durbo"
version = "0.1.0"
description = "Syncs the Hata chat between Facebook Messenger and Telegram"
license = "MPL-2.0"
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
readme = "README.md"
homepage = "https://github.com/Sharparam/durbo"
repository = "https://github.com/Sharparam/durbo"

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.14.0"
cryptg = "^0.2.post1"
pillow = "^7.1.2"
aiohttp = "^3.6.2"
hachoir = "^3.1.1"
fbchat = "^1.9.6"
toml = "^0.10.1"
peewee = "^3.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
